Style(navbar): Fix link contrast ratio #2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: #ff5e00b9;
+  color: #FF5D00;
 }
 
 body {
